# tamagochi-secretnetwork

./: Cargo.toml  Readme.md
contracts/Market/: .gitignore  Cargo.toml
contracts/Market/examples/: schema.rs
contracts/Market/src/: constants.rs  contract.rs  lib.rs  msg.rs  state.rs
contracts/Pet/: Cargo.toml
contracts/Pet/examples/: schema.rs
contracts/Pet/schema/: handle_msg.json  init_msg.json  query_msg.json  state.json
contracts/Pet/src/: contract.rs  lib.rs  msg.rs  pets.rs  state.rs
frontend/: .editorconfig  .eslintrc.js  .gitignore  README.md  babel.config.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
frontend/public/: Fox.mtl  index.html
frontend/public/cube/: cube.xcf
frontend/src/: Fox.js  MTLLoader.js  OBJLoader.js  OrbitControls.js  config.js  index.js  keplr.js  model.js  secret.ts
frontend/src/3D/: Fox.js  Heart.js
frontend/src/assets/styles/: style.scss
scripts/: 1_build_all.sh  1_build_optimize_all.sh  2_scp_all.sh  3_optimize_all.sh  3_optimize_workspace.sh
